# fastapi_htmx_sample

./: CLAUDE.md  README.md  main.py  pyproject.toml
templates/: index.html
